[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "causal_graph_evaluator"
version = "0.0.1"
authors = [
    { name="Nguyen Nhat Anh Vo", email="nathan.vo810@gmail.com" },
]
description = "A package for evaluating generated causal graphs."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/you/causal_graph_evaluator"
"Bug Tracker" = "https://github.com/you/causal_graph_evaluator/issues"
